--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
 {
-  "buildCommand": "pip install -r requirements.txt",
-  "functions": {
-    "api/*.py": {
-      "memory": 1024,
-      "maxDuration": 60
-    }
-  }
+  "version": 2,
+  "buildCommand": "pip install -r requirements.txt"
 }
